--- a/src/components/Logo/logo.css
+++ b/src/components/Logo/logo.css
@@ -1,12 +1,11 @@
 @import url("https://use.typekit.net/lzb1rwt.css");
-.logo {
-  align-self: flex-end; }
-  .logo .menu {
-    margin: 6px auto;
-    border-bottom: 2px solid white;
-    padding-bottom: 5px;
-    color: white;
-    font-family: "mr-eaves-modern",sans-serif; }
+.logo img {
+  max-height: 95vh;
+  position: absolute;
+  opacity: .019;
+  padding: 20px; }
+
+@media only screen and (max-width: 800px) {
   .logo img {
-    max-height: 50px;
-    margin-top: 8px; }
+    left: 0;
+    bottom: 0; } }
