--- a/src/components/Logo/logo.scss
+++ b/src/components/Logo/logo.scss
@@ -11,20 +11,20 @@ $olive: #84732B;
 $mauve:#785A64;
 
 .logo {
-    align-self: flex-end;
-
-    .menu {
-        margin:6px auto;
-        border-bottom:2px solid white;
-        padding-bottom: 5px;
-        color:white;
-        font-family: "mr-eaves-modern",sans-serif;
-    }
-
     img{
-        max-height:50px;
-        // background-color: #4f451b;
-        // box-shadow: 3px 3px #342e12;
-        margin-top:8px;
+        max-height:95vh;
+        position: absolute;
+        opacity: .019;
+        padding:20px;
+    }
+}
+
+//Mobile Responsive  =================================================
+@media only screen and (max-width: 800px) {
+    .logo {
+        img {
+            left:0;
+            bottom:0;
+        }
     }
 }
