--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -5,7 +5,7 @@
   max-width: 100vw; }
   #about-pg .page-header {
     background-color: #f1dac4;
-    text-align: left;
+    text-align: center;
     align-self: flex-start;
     z-index: 1;
     padding: 12px 105px;
@@ -18,8 +18,9 @@
     box-shadow: 0 5px 20px -4px #785A64; }
   #about-pg .about-us-content {
     display: flex;
-    margin: 40px 0 0 100px;
-    justify-content: space-around; }
+    justify-content: center;
+    z-index: 1;
+    margin: 30px 0; }
     #about-pg .about-us-content .team-info {
       padding: 30px;
       margin: 10px 10px;
@@ -32,7 +33,8 @@
         border-radius: 50%;
         border: 5px solid #785A64; }
       #about-pg .about-us-content .team-info h2, #about-pg .about-us-content .team-info h4, #about-pg .about-us-content .team-info p {
-        margin: 0; }
+        margin: 0;
+        color: #331831; }
       #about-pg .about-us-content .team-info h2 {
         padding: 10px 0 0 0;
         font-size: 32px; }
@@ -49,17 +51,37 @@
         font-size: 20px;
         text-align: left; }
       #about-pg .about-us-content .team-info .port-btn {
-        padding: 10px;
-        background-color: #785A64;
-        border: none;
-        font-size: 20px;
+        padding: 7px 10px;
+        background-color: #84732B;
+        border: 3px solid #695c22;
+        border-radius: 1px;
+        margin: 30px 0 10px 0;
         cursor: pointer; }
+      #about-pg .about-us-content .team-info a {
+        font-size: 22px;
+        font-family: "hooligan-jf", sans-serif;
+        text-transform: uppercase;
+        letter-spacing: .7px;
+        color: #f1dac4; }
+      #about-pg .about-us-content .team-info .port-btn:hover {
+        background-color: #695c22;
+        transform: scale(0.99); }
   #about-pg .company-explanation {
     background-color: #331831;
     align-self: flex-end;
     color: #dad5d9;
     font-size: 24px;
     max-width: 730px;
-    margin: 50px 0 -80px 0;
+    margin: 30px 0 -90px 0;
     padding: 12px 40px;
     z-index: 2; }
+
+@media only screen and (max-width: 800px) {
+  #about-pg .page-header {
+    font-size: 40px;
+    align-self: center;
+    padding: 10px 25px; }
+  #about-pg .about-us-content {
+    flex-wrap: wrap; }
+  #about-pg .company-explanation {
+    font-size: 20px; } }
