--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -17,7 +17,7 @@ $mauve:#785A64;
 
     .page-header{
         background-color:$beige;
-        text-align: left;
+        text-align: center;
         align-self: flex-start;
         z-index: 1;
         padding:12px 105px;
@@ -32,8 +32,9 @@ $mauve:#785A64;
 
     .about-us-content{
         display:flex;
-        margin:40px 0 0 100px;
-        justify-content: space-around;
+        justify-content: center;
+        z-index: 1;
+        margin:30px 0;
 
         .team-info {
             padding:30px;
@@ -51,6 +52,7 @@ $mauve:#785A64;
 
             h2, h4, p {
                 margin:0;
+                color:$darkpurple;
             }
 
             h2 {
@@ -77,13 +79,25 @@ $mauve:#785A64;
             }
 
             .port-btn {
-                padding:10px;
-                background-color:$mauve;
-                border:none;
-                font-size:20px;
+                padding:7px 10px;
+                background-color:$olive;
+                border:3px solid #695c22;
+                border-radius: 1px;
+                margin:30px 0 10px 0;
                 cursor: pointer;
-                // font-family: "hooligan-jf", sans-serif;
-                // text-transform: uppercase;
+            }
+
+            a {
+                font-size:22px;
+                font-family: "hooligan-jf", sans-serif;
+                text-transform: uppercase;
+                letter-spacing: .7px;
+                color:$beige;
+            }
+
+            .port-btn:hover {
+                background-color:#695c22;
+                transform: scale(.99);
             }
         }
     }
@@ -94,8 +108,25 @@ $mauve:#785A64;
         color:#dad5d9;
         font-size: 24px;
         max-width:730px;
-        margin:50px 0 -80px 0;
+        margin:30px 0 -90px 0;
         padding:12px 40px;
         z-index: 2;;
+    }
+}
+
+//Mobile Responsive  =================================================
+@media only screen and (max-width: 800px) {
+    #about-pg{
+        .page-header{
+            font-size: 40px;
+            align-self: center;
+            padding:10px 25px;
+        }
+        .about-us-content{
+            flex-wrap: wrap;
+        }
+        .company-explanation {
+            font-size:20px;
+        }
     }
 }
