--- a/src/components/What/what.css
+++ b/src/components/What/what.css
@@ -1,9 +1,38 @@
 @import url("https://use.typekit.net/lzb1rwt.css");
 #what-pg {
-  background-color: #D36135;
-  padding: 0; }
+  background-color: #f1dac4;
+  border-top: 15px solid #785A64;
+  padding: 0;
+  max-height: 100vh; }
   #what-pg .what-content {
-    background-color: #f1dac4;
-    margin: 0 auto;
-    width: 80vw;
-    height: 110vh; }
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 90vh; }
+    #what-pg .what-content .steps {
+      background: olive;
+      border: 3px solid #695c22;
+      color: #f1dac4;
+      width: 200px;
+      margin: 20px; }
+  #what-pg .line-one {
+    width: 70vw;
+    height: 98.5vh;
+    border-bottom: 20px solid #331831;
+    border-left: 20px solid transparent;
+    position: absolute;
+    right: 0; }
+  #what-pg .line-two {
+    width: 85vw;
+    height: 102.5vh;
+    border-bottom: 20px solid #785A64;
+    border-left: 20px solid transparent;
+    position: absolute;
+    right: 0; }
+  #what-pg .line-three {
+    width: 95vw;
+    height: 106.5vh;
+    border-bottom: 20px solid #D36135;
+    border-left: 20px solid transparent;
+    position: absolute;
+    right: 0; }
