--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -27,37 +27,37 @@ a {
 
 #landing-pg {
   align-items: center;
-  align-content: center;
-  background-color: #2d152c;
-  justify-content: space-around; }
+  justify-content: space-around;
+  background-color: #2d152c; }
   #landing-pg .line-one {
-    margin-top: -40px;
-    width: 220vh;
-    height: 200px;
-    border-bottom: 40px solid #D36135;
-    border-left: 40px solid #D36135;
-    border-radius: 80px;
-    transform: translateX(-51vw) rotate(-90deg);
+    margin-top: -20vh;
+    width: 105vw;
+    height: 40vw;
+    border-bottom: 3.1vw solid #D36135;
+    border-left: 3.1vw solid #D36135;
+    border-radius: 9vw;
+    transform: translateX(-63vw) rotate(-90deg);
     position: absolute; }
   #landing-pg .line-two {
-    margin-top: -40px;
-    width: 232vh;
-    height: 250px;
-    border-top: 31px solid #785A64;
-    border-right: 31px solid #785A64;
-    border-radius: 110px;
-    transform: translateX(-50vw) rotate(90deg);
+    margin-top: -20vh;
+    width: 111vw;
+    height: 40vw;
+    border-bottom: 2.4vw solid #785A64;
+    border-left: 2.4vw solid #785A64;
+    border-radius: 11.5vw;
+    transform: translateX(-60vw) rotate(-90deg);
     position: absolute; }
   #landing-pg .line-three {
-    margin-top: -40px;
-    width: 140vh;
-    height: 250px;
-    border-bottom: 31px solid #B695AC;
-    transform: translateX(-47vw) rotate(-90deg);
+    margin-top: -20vh;
+    width: 117vw;
+    height: 40vw;
+    border-bottom: 2.4vw solid #B695AC;
+    border-left: 2.4vw solid #B695AC;
+    border-radius: 14vw;
+    transform: translateX(-57vw) rotate(-90deg);
     position: absolute; }
   #landing-pg .company-name {
     margin: 0 auto;
-    margin-left: 23vw;
     color: #FFFFFF;
     font-size: 20vw;
     font-family: "hooligan-jf";
@@ -69,17 +69,25 @@ a {
     font-size: 25px;
     z-index: 1; }
 
-.logo {
-  align-self: flex-end; }
-  .logo .menu {
-    margin: 6px auto;
-    border-bottom: 2px solid white;
-    padding-bottom: 5px;
-    color: white;
-    font-family: "mr-eaves-modern",sans-serif; }
+@media only screen and (max-width: 800px) {
+  #landing-pg .company-name {
+    margin: 0;
+    font-size: 27vw; }
+  #landing-pg .mission-statement {
+    align-self: center; }
+  #landing-pg .line-one, #landing-pg .line-two, #landing-pg .line-three {
+    display: none; } }
+
+.logo img {
+  max-height: 95vh;
+  position: absolute;
+  opacity: .019;
+  padding: 20px; }
+
+@media only screen and (max-width: 800px) {
   .logo img {
-    max-height: 50px;
-    margin-top: 8px; }
+    left: 0;
+    bottom: 0; } }
 
 #about-pg {
   background-color: #B695AC;
@@ -87,7 +95,7 @@ a {
   max-width: 100vw; }
   #about-pg .page-header {
     background-color: #f1dac4;
-    text-align: left;
+    text-align: center;
     align-self: flex-start;
     z-index: 1;
     padding: 12px 105px;
@@ -100,8 +108,9 @@ a {
     box-shadow: 0 5px 20px -4px #785A64; }
   #about-pg .about-us-content {
     display: flex;
-    margin: 40px 0 0 100px;
-    justify-content: space-around; }
+    justify-content: center;
+    z-index: 1;
+    margin: 30px 0; }
     #about-pg .about-us-content .team-info {
       padding: 30px;
       margin: 10px 10px;
@@ -114,7 +123,8 @@ a {
         border-radius: 50%;
         border: 5px solid #785A64; }
       #about-pg .about-us-content .team-info h2, #about-pg .about-us-content .team-info h4, #about-pg .about-us-content .team-info p {
-        margin: 0; }
+        margin: 0;
+        color: #331831; }
       #about-pg .about-us-content .team-info h2 {
         padding: 10px 0 0 0;
         font-size: 32px; }
@@ -131,29 +141,82 @@ a {
         font-size: 20px;
         text-align: left; }
       #about-pg .about-us-content .team-info .port-btn {
-        padding: 10px;
-        background-color: #785A64;
-        border: none;
-        font-size: 20px;
+        padding: 7px 10px;
+        background-color: #84732B;
+        border: 3px solid #695c22;
+        border-radius: 1px;
+        margin: 30px 0 10px 0;
         cursor: pointer; }
+      #about-pg .about-us-content .team-info a {
+        font-size: 22px;
+        font-family: "hooligan-jf", sans-serif;
+        text-transform: uppercase;
+        letter-spacing: .7px;
+        color: #f1dac4; }
+      #about-pg .about-us-content .team-info .port-btn:hover {
+        background-color: #695c22;
+        transform: scale(0.99); }
   #about-pg .company-explanation {
     background-color: #331831;
     align-self: flex-end;
     color: #dad5d9;
     font-size: 24px;
     max-width: 730px;
-    margin: 50px 0 -80px 0;
+    margin: 30px 0 -90px 0;
     padding: 12px 40px;
     z-index: 2; }
 
+@media only screen and (max-width: 800px) {
+  #about-pg .page-header {
+    font-size: 40px;
+    align-self: center;
+    padding: 10px 25px; }
+  #about-pg .about-us-content {
+    flex-wrap: wrap; }
+  #about-pg .company-explanation {
+    font-size: 20px; } }
+
 #what-pg {
-  background-color: #D36135;
-  padding: 0; }
+  background-color: #f1dac4;
+  border-top: 15px solid #785A64;
+  padding: 0;
+  max-height: 100vh; }
   #what-pg .what-content {
-    background-color: #f1dac4;
-    margin: 0 auto;
-    width: 80vw;
-    height: 110vh; }
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 90vh; }
+    #what-pg .what-content .steps {
+      background: olive;
+      border: 3px solid #695c22;
+      color: #f1dac4;
+      width: 200px;
+      margin: 20px; }
+  #what-pg .line-one {
+    width: 70vw;
+    height: 98.5vh;
+    border-bottom: 20px solid #331831;
+    border-left: 20px solid transparent;
+    position: absolute;
+    right: 0; }
+  #what-pg .line-two {
+    width: 85vw;
+    height: 102.5vh;
+    border-bottom: 20px solid #785A64;
+    border-left: 20px solid transparent;
+    position: absolute;
+    right: 0; }
+  #what-pg .line-three {
+    width: 95vw;
+    height: 106.5vh;
+    border-bottom: 20px solid #D36135;
+    border-left: 20px solid transparent;
+    position: absolute;
+    right: 0; }
 
 #work-pg {
   z-index: 5; }
+
+@media only screen and (max-width: 800px) {
+  .page {
+    padding: 50px 10px; } }
