--- a/src/components/Logo/logo.css
+++ b/src/components/Logo/logo.css
@@ -7,5 +7,9 @@
 
 @media only screen and (max-width: 800px) {
   .logo img {
+    max-width: 95vw;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
     left: 0;
-    bottom: 0; } }
+    right: 0; } }
