--- a/src/components/Logo/logo.scss
+++ b/src/components/Logo/logo.scss
@@ -23,8 +23,12 @@ $mauve:#785A64;
 @media only screen and (max-width: 800px) {
     .logo {
         img {
-            left:0;
-            bottom:0;
+            max-width: 95vw;
+            position: absolute;
+            margin-left: auto;
+            margin-right: auto;
+            left: 0;
+            right: 0;
         }
     }
 }
