--- a/src/components/What/what.css
+++ b/src/components/What/what.css
@@ -36,3 +36,7 @@
     border-left: 20px solid transparent;
     position: absolute;
     right: 0; }
+
+@media only screen and (max-width: 800px) {
+  .what-content {
+    flex-direction: column; } }
