--- a/src/components/What/what.scss
+++ b/src/components/What/what.scss
@@ -58,3 +58,10 @@ $mauve:#785A64;
         right:0;
     }
 }
+
+//Mobile Responsive  =================================================
+@media only screen and (max-width: 800px) {
+    .what-content {
+        flex-direction: column;
+    }
+}
