--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -86,8 +86,12 @@ a {
 
 @media only screen and (max-width: 800px) {
   .logo img {
+    max-width: 95vw;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
     left: 0;
-    bottom: 0; } }
+    right: 0; } }
 
 #about-pg {
   background-color: #B695AC;
@@ -213,6 +217,10 @@ a {
     border-left: 20px solid transparent;
     position: absolute;
     right: 0; }
+
+@media only screen and (max-width: 800px) {
+  .what-content {
+    flex-direction: column; } }
 
 #work-pg {
   z-index: 5; }
