--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -4,6 +4,8 @@
 @import url("https://use.typekit.net/lzb1rwt.css");
 @import url("https://use.typekit.net/lzb1rwt.css");
 @import url("https://use.typekit.net/lzb1rwt.css");
+@import url("https://use.typekit.net/lzb1rwt.css");
+@import url("https://use.fontawesome.com/releases/v5.3.1/css/all.css");
 * {
   padding: 0;
   box-sizing: border-box; }
@@ -224,6 +226,36 @@ a {
 
 #work-pg {
   z-index: 5; }
+
+.modal-background {
+  background-color: #84732B; }
+
+.modal-style {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-shadow: 5px 5px 30px #785A64; }
+
+.menu-background {
+  background-color: transparent; }
+
+.menu-style {
+  background-color: rgba(51, 24, 49, 0.99);
+  height: 100%;
+  display: flex;
+  padding: 50px;
+  flex-direction: column;
+  justify-content: center; }
+  .menu-style .menu-btn {
+    color: #FFFFFF;
+    align-self: flex-end;
+    cursor: pointer;
+    position: absolute;
+    top: 5%;
+    right: 11%; }
+  .menu-style .menu-text {
+    font-size: 30px; }
 
 @media only screen and (max-width: 800px) {
   .page {
