--- a/src/components/Name/name.css
+++ b/src/components/Name/name.css
@@ -34,7 +34,7 @@
     margin: 0 auto;
     color: #FFFFFF;
     font-size: 20vw;
-    font-family: "hooligan-jf";
+    font-family: "hooligan-jf", Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     text-transform: uppercase;
     z-index: 1; }
   #landing-pg .mission-statement {
