--- a/src/components/Name/name.scss
+++ b/src/components/Name/name.scss
@@ -58,7 +58,7 @@ $mauve:#785A64;
         margin:0 auto;
         color:$white;
         font-size:20vw;
-        font-family: "hooligan-jf";
+        font-family: "hooligan-jf", Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
         text-transform: uppercase;
         z-index: 1;
     }
