--- a/src/components/Menu/menu.css
+++ b/src/components/Menu/menu.css
@@ -1,21 +1,53 @@
 @import url("https://use.typekit.net/lzb1rwt.css");
 @import url("https://use.fontawesome.com/releases/v5.3.1/css/all.css");
+.menu {
+  position: fixed;
+  right: 40px;
+  top: 30px;
+  font-size: 30px;
+  color: white;
+  z-index: 2; }
+  .menu p {
+    font-size: 16px;
+    margin: 0;
+    padding: 10px 0; }
+  .menu .menu-icon {
+    max-width: 40px;
+    cursor: pointer; }
+  .menu .menu-icon:hover {
+    transform: scale(1.1);
+    transition: .15s; }
+
 .menu-background {
-  background-color: transparent; }
+  background-color: rgba(0, 0, 0, 0.5); }
 
 .menu-style {
-  background-color: rgba(51, 24, 49, 0.99);
+  background-color: #D36135;
   height: 100%;
   display: flex;
-  padding: 50px;
+  padding: 50px 0;
   flex-direction: column;
-  justify-content: center; }
-  .menu-style .menu-btn {
-    color: #FFFFFF;
-    align-self: flex-end;
-    cursor: pointer;
-    position: absolute;
-    top: 5%;
-    right: 11%; }
+  justify-content: space-around;
+  align-items: center;
+  border-left: 5px solid #bd572f; }
+  .menu-style .menu-logo {
+    max-width: 65px;
+    max-height: 65px; }
   .menu-style .menu-text {
-    font-size: 30px; }
+    display: flex;
+    flex-direction: column; }
+    .menu-style .menu-text .menu-nav, .menu-style .menu-text #contact-btn {
+      margin: 0;
+      padding: 8px 65px;
+      width: 100%;
+      font-size: 28px;
+      color: #f1dac4;
+      text-transform: uppercase;
+      font-family: "hooligan-jf";
+      letter-spacing: 1px;
+      border: none;
+      background: #D36135;
+      cursor: pointer; }
+    .menu-style .menu-text .menu-nav:hover, .menu-style .menu-text #contact-btn:hover {
+      background-color: #331831;
+      transition: .15s; }
