--- a/src/components/Menu/menu.scss
+++ b/src/components/Menu/menu.scss
@@ -12,29 +12,71 @@ $olive: #84732B;
 $mauve:#785A64;
 
 //Modal Styling =======================================================
+.menu{
+    position: fixed;
+    right:40px;
+    top:30px;
+    font-size: 30px;
+    color:white;
+    z-index: 2;
+
+    p{
+        font-size:16px;
+        margin:0;
+        padding:10px 0;
+    }
+
+    .menu-icon {
+        max-width:40px;
+        cursor: pointer;
+    }
+
+    .menu-icon:hover{
+        transform: scale(1.1);
+        transition: .15s;
+    }
+}
+
 .menu-background {
-    background-color:transparent;
+    background-color:rgba($color: #000000, $alpha: .5)
 }
 
 .menu-style {
-  background-color:rgba(51, 24, 49, .99);
+  background-color:$orange;
   height:100%;
   display: flex;
-  padding:50px;
+  padding:50px 0;
   flex-direction: column;
-  justify-content: center;
-//   box-shadow: 5px 5px 30px $darkpurple;
+  justify-content: space-around;
+  align-items: center;
+  border-left:5px solid #bd572f;
 
-    .menu-btn {
-        color:$white;
-        align-self: flex-end;
-        cursor: pointer;
-        position: absolute;
-        top:5%;
-        right:11%;
+    .menu-logo{
+        max-width: 65px;
+        max-height: 65px;
     }
 
-    .menu-text{
-        font-size:30px;
+    .menu-text{ 
+        display: flex;
+        flex-direction: column;
+        
+        .menu-nav, #contact-btn {
+            margin: 0;
+            padding:8px 65px;
+            width:100%;
+            font-size:28px;
+            color:$beige;
+            text-transform: uppercase;
+            font-family:"hooligan-jf";
+            letter-spacing: 1px;
+            border:none;
+            background:$orange;
+            cursor: pointer;
+        }
+
+        .menu-nav:hover, #contact-btn:hover {
+            background-color:$darkpurple;
+            transition: .15s;
+        }
     }
 }
