--- a/src/components/Logo/logo.scss
+++ b/src/components/Logo/logo.scss
@@ -29,6 +29,7 @@ $mauve:#785A64;
             margin-right: auto;
             left: 0;
             right: 0;
+            bottom:25vh;
         }
     }
 }
