--- a/src/components/Menu/menu.scss
+++ b/src/components/Menu/menu.scss
@@ -80,3 +80,11 @@ $mauve:#785A64;
         }
     }
 }
+
+
+//Mobile Responsive  =================================================
+@media only screen and (max-width: 800px) {
+    .menu {
+        display: none;
+    }
+}
