--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -1,21 +1,19 @@
 @import url("https://use.typekit.net/lzb1rwt.css");
 #about-pg {
-  background-color: #B695AC;
-  min-height: 100vh;
-  max-width: 100vw; }
+  background-color: #B695AC; }
   #about-pg .page-header {
     background-color: #f1dac4;
-    text-align: center;
     align-self: flex-start;
-    z-index: 1;
+    margin: -75px 0 0 10px;
     padding: 12px 105px;
+    z-index: 1;
+    box-shadow: 0 5px 20px -4px #785A64;
     color: #472f45;
+    text-align: center;
     font-size: 55px;
     font-family: "hooligan-jf", sans-serif;
     letter-spacing: 2px;
-    text-transform: uppercase;
-    margin: -75px 0 0 10px;
-    box-shadow: 0 5px 20px -4px #785A64; }
+    text-transform: uppercase; }
   #about-pg .about-us-content {
     display: flex;
     justify-content: center;
@@ -25,16 +23,15 @@
       padding: 30px;
       margin: 10px 10px;
       box-shadow: 5px 10px 20px #785A64;
-      background-color: #B695AC;
-      border-radius: 1px; }
+      border-radius: 1px;
+      color: #331831; }
       #about-pg .about-us-content .team-info img {
         width: 230px;
         height: 230px;
         border-radius: 50%;
         border: 5px solid #785A64; }
       #about-pg .about-us-content .team-info h2, #about-pg .about-us-content .team-info h4, #about-pg .about-us-content .team-info p {
-        margin: 0;
-        color: #331831; }
+        margin: 0; }
       #about-pg .about-us-content .team-info h2 {
         padding: 10px 0 0 0;
         font-size: 32px; }
@@ -51,17 +48,17 @@
         font-size: 20px;
         text-align: left; }
       #about-pg .about-us-content .team-info .port-btn {
-        padding: 7px 10px;
         background-color: #84732B;
+        margin: 30px 0 10px 0;
+        padding: 7px 10px;
         border: 3px solid #695c22;
         border-radius: 1px;
-        margin: 30px 0 10px 0;
         cursor: pointer; }
       #about-pg .about-us-content .team-info a {
         font-size: 22px;
         font-family: "hooligan-jf", sans-serif;
         text-transform: uppercase;
-        letter-spacing: .7px;
+        letter-spacing: 1px;
         color: #f1dac4; }
       #about-pg .about-us-content .team-info .port-btn:hover {
         background-color: #695c22;
