--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -12,22 +12,20 @@ $mauve:#785A64;
 
 #about-pg {
     background-color: $purple;
-    min-height: 100vh;
-    max-width: 100vw;
 
     .page-header{
         background-color:$beige;
-        text-align: center;
         align-self: flex-start;
-        z-index: 1;
+        margin:-75px 0 0 10px;
         padding:12px 105px;
+        z-index: 1;
+        box-shadow: 0 5px 20px -4px $mauve;
         color:#472f45;
+        text-align: center;
         font-size: 55px;
-        font-family: "hooligan-jf", sans-serif;
+        font-family:"hooligan-jf", sans-serif;
         letter-spacing: 2px;
         text-transform: uppercase;
-        margin:-75px 0 0 10px;
-        box-shadow: 0 5px 20px -4px $mauve;
     }
 
     .about-us-content{
@@ -40,8 +38,8 @@ $mauve:#785A64;
             padding:30px;
             margin:10px 10px;
             box-shadow: 5px 10px 20px  $mauve;
-            background-color: $purple;
             border-radius: 1px;
+            color:$darkpurple;
 
             img {
                 width:230px;
@@ -52,7 +50,6 @@ $mauve:#785A64;
 
             h2, h4, p {
                 margin:0;
-                color:$darkpurple;
             }
 
             h2 {
@@ -79,11 +76,11 @@ $mauve:#785A64;
             }
 
             .port-btn {
-                padding:7px 10px;
                 background-color:$olive;
+                margin:30px 0 10px 0;
+                padding:7px 10px;
                 border:3px solid #695c22;
                 border-radius: 1px;
-                margin:30px 0 10px 0;
                 cursor: pointer;
             }
 
@@ -91,7 +88,7 @@ $mauve:#785A64;
                 font-size:22px;
                 font-family: "hooligan-jf", sans-serif;
                 text-transform: uppercase;
-                letter-spacing: .7px;
+                letter-spacing: 1px;
                 color:$beige;
             }
 
