--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -31,54 +31,45 @@ a {
   align-items: center;
   justify-content: space-around;
   background-color: #2d152c; }
+  #landing-pg .line-one, #landing-pg .line-two, #landing-pg .line-three {
+    margin-top: -20vh;
+    height: 40vw;
+    position: absolute; }
   #landing-pg .line-one {
-    margin-top: -20vh;
     width: 105vw;
-    height: 40vw;
-    border-bottom: 3.1vw solid #D36135;
-    border-left: 3.1vw solid #D36135;
+    border: 3.1vw solid #D36135;
     border-radius: 9vw;
-    transform: translateX(-63vw) rotate(-90deg);
-    position: absolute; }
+    transform: translateX(-63vw) rotate(-90deg); }
   #landing-pg .line-two {
-    margin-top: -20vh;
     width: 111vw;
-    height: 40vw;
-    border-bottom: 2.4vw solid #785A64;
-    border-left: 2.4vw solid #785A64;
+    border: 2.4vw solid #785A64;
     border-radius: 11.5vw;
-    transform: translateX(-60vw) rotate(-90deg);
-    position: absolute; }
+    transform: translateX(-60vw) rotate(-90deg); }
   #landing-pg .line-three {
-    margin-top: -20vh;
     width: 117vw;
-    height: 40vw;
-    border-bottom: 2.4vw solid #B695AC;
-    border-left: 2.4vw solid #B695AC;
+    border: 2.4vw solid #B695AC;
     border-radius: 14vw;
-    transform: translateX(-57vw) rotate(-90deg);
-    position: absolute; }
+    transform: translateX(-57vw) rotate(-90deg); }
   #landing-pg .company-name {
     margin: 0 auto;
     color: #FFFFFF;
     font-size: 20vw;
-    font-family: "hooligan-jf", Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    text-transform: uppercase;
-    z-index: 1; }
+    font-family: "hooligan-jf", Impact, 'Arial Narrow Bold', sans-serif;
+    text-transform: uppercase; }
   #landing-pg .mission-statement {
     color: #D36135;
     align-self: flex-end;
-    font-size: 25px;
-    z-index: 1; }
+    font-size: 25px; }
 
 @media only screen and (max-width: 800px) {
-  #landing-pg .company-name {
-    margin: 0;
-    font-size: 27vw; }
-  #landing-pg .mission-statement {
-    align-self: center; }
-  #landing-pg .line-one, #landing-pg .line-two, #landing-pg .line-three {
-    display: none; } }
+  #landing-pg {
+    justify-content: center; }
+    #landing-pg .company-name {
+      font-size: 33vw; }
+    #landing-pg .mission-statement {
+      align-self: center; }
+    #landing-pg .line-one, #landing-pg .line-two, #landing-pg .line-three {
+      display: none; } }
 
 .logo img {
   max-height: 95vh;
@@ -93,25 +84,24 @@ a {
     margin-left: auto;
     margin-right: auto;
     left: 0;
-    right: 0; } }
+    right: 0;
+    bottom: 25vh; } }
 
 #about-pg {
-  background-color: #B695AC;
-  min-height: 100vh;
-  max-width: 100vw; }
+  background-color: #B695AC; }
   #about-pg .page-header {
     background-color: #f1dac4;
-    text-align: center;
     align-self: flex-start;
-    z-index: 1;
+    margin: -75px 0 0 10px;
     padding: 12px 105px;
+    z-index: 1;
+    box-shadow: 0 5px 20px -4px #785A64;
     color: #472f45;
+    text-align: center;
     font-size: 55px;
     font-family: "hooligan-jf", sans-serif;
     letter-spacing: 2px;
-    text-transform: uppercase;
-    margin: -75px 0 0 10px;
-    box-shadow: 0 5px 20px -4px #785A64; }
+    text-transform: uppercase; }
   #about-pg .about-us-content {
     display: flex;
     justify-content: center;
@@ -121,16 +111,15 @@ a {
       padding: 30px;
       margin: 10px 10px;
       box-shadow: 5px 10px 20px #785A64;
-      background-color: #B695AC;
-      border-radius: 1px; }
+      border-radius: 1px;
+      color: #331831; }
       #about-pg .about-us-content .team-info img {
         width: 230px;
         height: 230px;
         border-radius: 50%;
         border: 5px solid #785A64; }
       #about-pg .about-us-content .team-info h2, #about-pg .about-us-content .team-info h4, #about-pg .about-us-content .team-info p {
-        margin: 0;
-        color: #331831; }
+        margin: 0; }
       #about-pg .about-us-content .team-info h2 {
         padding: 10px 0 0 0;
         font-size: 32px; }
@@ -147,17 +136,17 @@ a {
         font-size: 20px;
         text-align: left; }
       #about-pg .about-us-content .team-info .port-btn {
-        padding: 7px 10px;
         background-color: #84732B;
+        margin: 30px 0 10px 0;
+        padding: 7px 10px;
         border: 3px solid #695c22;
         border-radius: 1px;
-        margin: 30px 0 10px 0;
         cursor: pointer; }
       #about-pg .about-us-content .team-info a {
         font-size: 22px;
         font-family: "hooligan-jf", sans-serif;
         text-transform: uppercase;
-        letter-spacing: .7px;
+        letter-spacing: 1px;
         color: #f1dac4; }
       #about-pg .about-us-content .team-info .port-btn:hover {
         background-color: #695c22;
@@ -185,8 +174,7 @@ a {
 #what-pg {
   background-color: #f1dac4;
   border-top: 15px solid #785A64;
-  padding: 0;
-  max-height: 100vh; }
+  padding: 0; }
   #what-pg .what-content {
     display: flex;
     justify-content: center;
@@ -223,9 +211,6 @@ a {
 @media only screen and (max-width: 800px) {
   .what-content {
     flex-direction: column; } }
-
-#work-pg {
-  z-index: 5; }
 
 .modal-background {
   background-color: #84732B; }
@@ -288,6 +273,10 @@ a {
     .menu-style .menu-text .menu-nav:hover, .menu-style .menu-text #contact-btn:hover {
       background-color: #331831;
       transition: .15s; }
+
+@media only screen and (max-width: 800px) {
+  .menu {
+    display: none; } }
 
 @media only screen and (max-width: 800px) {
   .page {
