--- a/src/components/Menu/menu.css
+++ b/src/components/Menu/menu.css
@@ -1,5 +1,4 @@
 @import url("https://use.typekit.net/lzb1rwt.css");
-@import url("https://use.fontawesome.com/releases/v5.3.1/css/all.css");
 .menu {
   position: fixed;
   right: 40px;
@@ -29,7 +28,8 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  border-left: 5px solid #bd572f; }
+  border-left: 5px solid #bd572f;
+  border-right: 5px solid #bd572f; }
   .menu-style .menu-logo {
     max-width: 65px;
     max-height: 65px; }
@@ -38,7 +38,7 @@
     flex-direction: column; }
     .menu-style .menu-text .menu-nav, .menu-style .menu-text #contact-btn {
       margin: 0;
-      padding: 8px 65px;
+      padding: 8px 85px;
       width: 100%;
       font-size: 28px;
       color: #f1dac4;
@@ -51,6 +51,8 @@
     .menu-style .menu-text .menu-nav:hover, .menu-style .menu-text #contact-btn:hover {
       background-color: #331831;
       transition: .15s; }
+    .menu-style .menu-text #contact-btn {
+      outline: none; }
 
 @media only screen and (max-width: 800px) {
   .menu {
