--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -1,9 +1,80 @@
-.modal-background {
-  background-color: #84732B; }
+@import url("https://use.fontawesome.com/releases/v5.3.1/css/all.css");
+.modal-background .modal-style .modal-title, .modal-background .modal-style .submit-btn {
+  font-family: "hooligan-jf", sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: #f1dac4; }
 
-.modal-style {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  box-shadow: 5px 5px 30px #785A64; }
+.modal-background {
+  background-color: #D36135; }
+  .modal-background .modal-style {
+    width: 100%;
+    height: 100%;
+    padding: 50px 10px;
+    display: flex;
+    flex-direction: column; }
+    .modal-background .modal-style .modal-btn {
+      position: absolute;
+      right: 20px;
+      top: 20px;
+      color: #934325;
+      cursor: pointer; }
+    .modal-background .modal-style .modal-btn:hover {
+      color: #542615; }
+    .modal-background .modal-style .modal-title {
+      font-family: "hooligan-jf", sans-serif;
+      font-size: 60px;
+      margin: 0 auto; }
+    .modal-background .modal-style p {
+      margin: 0;
+      text-align: left;
+      padding: 10px 0 0 15px;
+      color: #7e3a1f;
+      font-size: 15px; }
+    .modal-background .modal-style input[type=text] {
+      color: #f1dac4;
+      font-size: 16px; }
+    .modal-background .modal-style ::placeholder {
+      color: #934325; }
+    .modal-background .modal-style .form-text {
+      margin: 20px 0; }
+    .modal-background .modal-style .form-entry {
+      background-color: #d77049;
+      border: none;
+      box-shadow: 0 2px 10px -2px #a84d2a;
+      padding: 15px 10px;
+      margin: 5px 0;
+      outline: none;
+      width: 90%;
+      border-radius: 2px; }
+    .modal-background .modal-style .submit-btn {
+      background-color: #84732B;
+      padding: 10px 30px;
+      border: 3px solid #695c22;
+      border-radius: 50px;
+      font-size: 25px;
+      margin: 20px 0;
+      cursor: pointer; }
+    .modal-background .modal-style .submit-btn:hover {
+      background-color: #695c22;
+      transform: scale(0.99);
+      transition: .15s; }
+    .modal-background .modal-style .social-media {
+      padding: 20px;
+      position: absolute;
+      bottom: 0;
+      align-self: center; }
+      .modal-background .modal-style .social-media .social-media-link {
+        margin: 5px; }
+        .modal-background .modal-style .social-media .social-media-link i {
+          padding: 9px 10px 10px 10px;
+          background-color: #e4a085;
+          width: 35px;
+          height: 35px;
+          margin: 0 auto;
+          border-radius: 50%;
+          color: #D36135; }
+        .modal-background .modal-style .social-media .social-media-link i:hover {
+          background-color: #f1dac4;
+          transform: scale(1.1);
+          transition: .15s; }
