--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -1,3 +1,5 @@
+@import url("https://use.fontawesome.com/releases/v5.3.1/css/all.css");
+
 //Colors =============================================================
 $darkpurple:#331831;
 $orange:#D36135;
@@ -7,15 +9,116 @@ $white:#FFFFFF;
 $olive: #84732B;
 $mauve:#785A64;
 
-
-.modal-background{
-    background-color: $olive;
+%modal-font {
+    font-family: "hooligan-jf", sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    color:$beige;
 }
 
-.modal-style{
-    width: 100%;
-    display: flex;
-    flex-direction:column;
-    justify-content: space-between;
-    box-shadow: 5px 5px 30px $mauve;
+.modal-background{
+    background-color: $orange;
+
+    .modal-style{
+        width: 100%;
+        height:100%;
+        padding:50px 10px;
+        display: flex;
+        flex-direction:column;
+
+        .modal-btn{
+            position: absolute;
+            right:20px;
+            top:20px;
+            color:#934325;
+            cursor: pointer;
+        }
+
+        .modal-btn:hover{
+            color:#542615;
+        }
+
+        .modal-title{
+            font-family: "hooligan-jf", sans-serif;
+            font-size:60px;
+            @extend %modal-font;
+            margin:0 auto;
+        }
+
+        p {
+            margin:0;
+            text-align: left;
+            padding:10px 0 0 15px;
+            color:#7e3a1f;
+            font-size:15px;
+        }
+
+        input[type=text]{
+            color: $beige;
+            font-size:16px;
+        }
+
+        ::placeholder {
+            color: #934325;
+
+        }
+
+        .form-text{
+            margin:20px 0;
+        }
+
+        .form-entry {
+            background-color: #d77049;
+            border:none;
+            box-shadow: 0 2px 10px -2px #a84d2a;
+            padding:15px 10px;
+            margin:5px 0;
+            outline:none;
+            width:90%;
+            border-radius: 2px;
+        }
+        
+        .submit-btn {
+            background-color:$olive;
+            padding:10px 30px;
+            border:3px solid #695c22;
+            border-radius: 50px;
+            @extend %modal-font;
+            font-size: 25px;
+            margin:20px 0;
+            cursor: pointer;
+        }
+
+        .submit-btn:hover {
+            background-color:#695c22;
+            transform: scale(.99);
+            transition:.15s;
+        }
+
+        .social-media{
+            padding:20px;
+            position: absolute;
+            bottom:0;
+            align-self: center;
+
+           .social-media-link{
+               margin:5px;
+
+               i{
+                padding:9px 10px 10px 10px;
+                background-color:#e4a085;
+                width:35px;
+                height:35px;
+                margin:0 auto;
+                border-radius: 50%;
+                color:$orange;
+               }
+               i:hover{
+                   background-color:$beige;
+                   transform: scale(1.1);
+                   transition:.15s;
+               }
+           }
+        }
+    }
 }
