--- a/src/components/Name/name.scss
+++ b/src/components/Name/name.scss
@@ -49,7 +49,8 @@ $mauve:#785A64;
     }
 
     .company-name {
-        margin:0 auto;
+        margin: auto;
+        margin:5vw 0 0 10vw;
         color:$white;
         font-size:20vw;
         font-family: "hooligan-jf", Impact, 'Arial Narrow Bold', sans-serif;
@@ -69,6 +70,7 @@ $mauve:#785A64;
         justify-content: center;
         .company-name {
             font-size:33vw;
+            margin:0 auto;
         }
         .mission-statement{
             align-self: center;
