--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -4,8 +4,8 @@
 @import url("https://use.typekit.net/lzb1rwt.css");
 @import url("https://use.typekit.net/lzb1rwt.css");
 @import url("https://use.typekit.net/lzb1rwt.css");
-@import url("https://use.typekit.net/lzb1rwt.css");
 @import url("https://use.fontawesome.com/releases/v5.3.1/css/all.css");
+@import url("https://use.typekit.net/lzb1rwt.css");
 * {
   padding: 0;
   box-sizing: border-box; }
@@ -51,7 +51,8 @@ a {
     border-radius: 14vw;
     transform: translateX(-57vw) rotate(-90deg); }
   #landing-pg .company-name {
-    margin: 0 auto;
+    margin: auto;
+    margin: 5vw 0 0 10vw;
     color: #FFFFFF;
     font-size: 20vw;
     font-family: "hooligan-jf", Impact, 'Arial Narrow Bold', sans-serif;
@@ -65,7 +66,8 @@ a {
   #landing-pg {
     justify-content: center; }
     #landing-pg .company-name {
-      font-size: 33vw; }
+      font-size: 33vw;
+      margin: 0 auto; }
     #landing-pg .mission-statement {
       align-self: center; }
     #landing-pg .line-one, #landing-pg .line-two, #landing-pg .line-three {
@@ -187,40 +189,128 @@ a {
       width: 200px;
       margin: 20px; }
   #what-pg .line-one {
-    width: 70vw;
     height: 98.5vh;
     border-bottom: 20px solid #331831;
     border-left: 20px solid transparent;
     position: absolute;
-    right: 0; }
+    right: 0;
+    animation: slidein1 .5s ease-in .15s forwards; }
   #what-pg .line-two {
-    width: 85vw;
     height: 102.5vh;
     border-bottom: 20px solid #785A64;
     border-left: 20px solid transparent;
     position: absolute;
-    right: 0; }
+    right: 0;
+    animation: slidein2 .5s ease-in .25s forwards; }
   #what-pg .line-three {
-    width: 95vw;
     height: 106.5vh;
     border-bottom: 20px solid #D36135;
     border-left: 20px solid transparent;
     position: absolute;
-    right: 0; }
+    right: 0;
+    animation: slidein3 .5s ease-in .35s forwards; }
+
+@keyframes slidein1 {
+  0% {
+    width: 0%; }
+  100% {
+    width: 70vw; } }
+
+@keyframes slidein2 {
+  0% {
+    width: 0%; }
+  100% {
+    width: 85vw; } }
+
+@keyframes slidein3 {
+  0% {
+    width: 0%; }
+  100% {
+    width: 95vw; } }
 
 @media only screen and (max-width: 800px) {
   .what-content {
     flex-direction: column; } }
 
-.modal-background {
-  background-color: #84732B; }
+.modal-background .modal-style .modal-title, .modal-background .modal-style .submit-btn {
+  font-family: "hooligan-jf", sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: #f1dac4; }
 
-.modal-style {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  box-shadow: 5px 5px 30px #785A64; }
+.modal-background {
+  background-color: #D36135; }
+  .modal-background .modal-style {
+    width: 100%;
+    height: 100%;
+    padding: 50px 10px;
+    display: flex;
+    flex-direction: column; }
+    .modal-background .modal-style .modal-btn {
+      position: absolute;
+      right: 20px;
+      top: 20px;
+      color: #934325;
+      cursor: pointer; }
+    .modal-background .modal-style .modal-btn:hover {
+      color: #542615; }
+    .modal-background .modal-style .modal-title {
+      font-family: "hooligan-jf", sans-serif;
+      font-size: 60px;
+      margin: 0 auto; }
+    .modal-background .modal-style p {
+      margin: 0;
+      text-align: left;
+      padding: 10px 0 0 15px;
+      color: #7e3a1f;
+      font-size: 15px; }
+    .modal-background .modal-style input[type=text] {
+      color: #f1dac4;
+      font-size: 16px; }
+    .modal-background .modal-style ::placeholder {
+      color: #934325; }
+    .modal-background .modal-style .form-text {
+      margin: 20px 0; }
+    .modal-background .modal-style .form-entry {
+      background-color: #d77049;
+      border: none;
+      box-shadow: 0 2px 10px -2px #a84d2a;
+      padding: 15px 10px;
+      margin: 5px 0;
+      outline: none;
+      width: 90%;
+      border-radius: 2px; }
+    .modal-background .modal-style .submit-btn {
+      background-color: #84732B;
+      padding: 10px 30px;
+      border: 3px solid #695c22;
+      border-radius: 50px;
+      font-size: 25px;
+      margin: 20px 0;
+      cursor: pointer; }
+    .modal-background .modal-style .submit-btn:hover {
+      background-color: #695c22;
+      transform: scale(0.99);
+      transition: .15s; }
+    .modal-background .modal-style .social-media {
+      padding: 20px;
+      position: absolute;
+      bottom: 0;
+      align-self: center; }
+      .modal-background .modal-style .social-media .social-media-link {
+        margin: 5px; }
+        .modal-background .modal-style .social-media .social-media-link i {
+          padding: 9px 10px 10px 10px;
+          background-color: #e4a085;
+          width: 35px;
+          height: 35px;
+          margin: 0 auto;
+          border-radius: 50%;
+          color: #D36135; }
+        .modal-background .modal-style .social-media .social-media-link i:hover {
+          background-color: #f1dac4;
+          transform: scale(1.1);
+          transition: .15s; }
 
 .menu {
   position: fixed;
@@ -251,7 +341,8 @@ a {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  border-left: 5px solid #bd572f; }
+  border-left: 5px solid #bd572f;
+  border-right: 5px solid #bd572f; }
   .menu-style .menu-logo {
     max-width: 65px;
     max-height: 65px; }
@@ -260,7 +351,7 @@ a {
     flex-direction: column; }
     .menu-style .menu-text .menu-nav, .menu-style .menu-text #contact-btn {
       margin: 0;
-      padding: 8px 65px;
+      padding: 8px 85px;
       width: 100%;
       font-size: 28px;
       color: #f1dac4;
@@ -273,6 +364,8 @@ a {
     .menu-style .menu-text .menu-nav:hover, .menu-style .menu-text #contact-btn:hover {
       background-color: #331831;
       transition: .15s; }
+    .menu-style .menu-text #contact-btn {
+      outline: none; }
 
 @media only screen and (max-width: 800px) {
   .menu {
