--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -57,6 +57,9 @@ a {
 //Menu  ==========================================================
 @import "../components/Menu/menu.scss";
 
+//MobileNav  ==========================================================
+@import "../components/MobileNav/mobilenav.scss";
+
 //Mobile Responsive  =================================================
 @media only screen and (max-width: 800px) {
     .page {
