--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -118,6 +118,7 @@ $mauve:#785A64;
             font-size: 40px;
             align-self: center;
             padding:10px 25px;
+            width:90vw;
         }
         .about-us-content{
             flex-wrap: wrap;
