--- a/src/components/About/about.css
+++ b/src/components/About/about.css
@@ -77,7 +77,8 @@
   #about-pg .page-header {
     font-size: 40px;
     align-self: center;
-    padding: 10px 25px; }
+    padding: 10px 25px;
+    width: 90vw; }
   #about-pg .about-us-content {
     flex-wrap: wrap; }
   #about-pg .company-explanation {
