--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -87,7 +87,8 @@ a {
     margin-left: auto;
     margin-right: auto;
     left: 0;
-    right: 0; } }
+    right: 0;
+    top: 10%; } }
 
 #about-pg {
   background-color: #B695AC; }
@@ -167,7 +168,8 @@ a {
   #about-pg .page-header {
     font-size: 40px;
     align-self: center;
-    padding: 10px 25px; }
+    padding: 10px 25px;
+    width: 90vw; }
   #about-pg .about-us-content {
     flex-wrap: wrap; }
   #about-pg .company-explanation {
@@ -382,29 +384,31 @@ a {
   .mobilenav {
     position: fixed;
     top: 0;
-    background-color: #D36135;
+    background-color: #2d152c;
     width: 100%;
     display: flex;
     justify-content: space-around;
     z-index: 9999;
     padding: 5px 0;
-    box-shadow: 0 5px 20px -7px #331831; }
+    box-shadow: 0 5px 20px -7px #2d152c; }
     .mobilenav .mobile-item {
       display: flex;
       flex-direction: column; }
-    .mobilenav p, .mobilenav #contact-btn {
-      color: #f1dac4;
+    .mobilenav .mobile-item p, .mobilenav #contact-btn {
+      color: #785A64;
       text-transform: uppercase;
       font-size: 13px;
       margin: 0 auto;
-      background-color: #D36135;
+      background-color: #2d152c;
       border: none;
       cursor: pointer;
       font-family: "mr-eaves-modern",sans-serif; }
+    .mobilenav .form-text p {
+      margin: 0 3vw; }
     .mobilenav .fa-comment {
       padding: 5px 10px 3px 10px; }
     .mobilenav i {
-      color: #331831;
+      color: #f1dac4;
       font-size: 16px;
       padding: 5px 10px; } }
 
